--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,4 @@
 <resources>
     <string name="app_name">Friend Tracker</string>
-    <string name="title_activity_main">Friend Tracker</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_main_menu">MainMenuActivity</string>
-    <string name="action_settings">Settings</string>
-    <string name="section_format">Hello World from section: %1$d</string>
-    <string name="title_activity_main2">Friend Tracker</string>
-    <string name="add_friend_from_contacts">Add Friend from contacts</string>
+    <string name="my_title">Friend Tracker</string>
 </resources>
