Fixed some bugs and added logic (friends are now added and deleted properly when the are manipulated from view)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="id">ID:</string>
     <string name="name">NAME:</string>
     <string name="email">EMAIL:</string>
+    <string name="friendCount">FRIEND COUNT:</string>
 </resources>
