--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="name">NAME:</string>
     <string name="email">EMAIL:</string>
     <string name="friendCount">FRIEND COUNT:</string>
+    <string name="birthday">BIRTHDAY:</string>
 </resources>
