Added Edit friend details functionality All activities/fragments that access the calendar now use ChooseDateFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
     <string name="app_name">Friend Tracker</string>
     <string name="my_title">Friend Tracker</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="id">ID:</string>
     <string name="name">NAME:</string>
     <string name="email">EMAIL:</string>
     <string name="friendCount">FRIEND COUNT:</string>
     <string name="birthday">BIRTHDAY:</string>
+    <string name="menu_settings">Edit</string>
+    <string name="back_button">Edit</string>
 </resources>
