--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="birthday">BIRTHDAY:</string>
     <string name="menu_settings">Edit</string>
     <string name="back_button">Edit</string>
+    <string name="search_title">Search</string>
 </resources>
