--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,11 +3,16 @@
     <string name="my_title">Friend Tracker</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="id">ID:</string>
-    <string name="name">NAME:</string>
-    <string name="email">EMAIL:</string>
-    <string name="friendCount">FRIEND COUNT:</string>
-    <string name="birthday">BIRTHDAY:</string>
+    <string name="name">Name:</string>
+    <string name="email">Email:</string>
+    <string name="friendCount">Friend Count:</string>
+    <string name="birthday">Birthday:</string>
     <string name="menu_settings">Edit</string>
     <string name="back_button">Edit</string>
     <string name="search_title">Search</string>
+    <string name="title">Title:</string>
+    <string name="start_time">Choose Friends:</string>
+    <string name="choose_friends">Choose Friends:</string>
+    <string name="choose_location">Choose Location:</string>
+    <string name="choose_date">Choose Location:</string>
 </resources>
