--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="meeting_date">Date:</string>
     <string name="meeting_start_time">Start Time:</string>
     <string name="meeting_end_time">End Time:</string>
+    <string name="meeting_friends">Attendees:</string>
     <string name="number_of_friends">Number of friends:</string>
     <string name="edit_meeting_title">Title:</string>
     <string name="edit_meeting_start_time">Start Time:</string>
