--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="birthday">Birthday:</string>
     <string name="location">Location:</string>
     <string name="menu_settings">Edit</string>
+    <string name="settings">Settings</string>
+    <string name="user_profile">My Profile</string>
     <string name="back_button">Edit</string>
     <string name="search_title">Search</string>
     <string name="title">Title:</string>
