--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="friendCount">Friend Count:</string>
     <string name="birthday">Birthday:</string>
     <string name="location">Location:</string>
+    <string name="combinedWalktime">Combined Walktime:</string>
     <string name="menu_settings">Edit</string>
     <string name="settings">Settings</string>
     <string name="user_profile">My Profile</string>
